# cutetoolbox

./: CMakeLists.txt  README.md
resources/: cutetoolbox.desktop  index.html  resources.qrc
resources/icons/: javaformatter.svg LICENSE.txt
src/: config.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/utils/: colorcardwidget.cpp  colorcardwidget.h  colorcardwidget.ui  document.cpp  document.h  imageview.cpp  imageview.h  previewpage.cpp  previewpage.h
src/utils/editor/: codeeditor.cpp  codeeditor.h  linenumberarea.cpp  linenumberarea.h
src/utils/syntaxhighlighters/: htmlsyntaxhighlighter.cpp  htmlsyntaxhighlighter.h  jsonsyntaxhighlighter.cpp  jsonsyntaxhighlighter.h  markdownsyntaxhighlighter.cpp  markdownsyntaxhighlighter.h
src/widgets/: apitester.cpp  apitester.h  apitester.ui  apitesterwidget.cpp  apitesterwidget.h  apitesterwidget.ui  base64coderdecoderwidget.cpp  base64coderdecoderwidget.h  base64coderdecoderwidget.ui  chmodcalculatorwidget.cpp  chmodcalculatorwidget.h  chmodcalculatorwidget.ui  colorpalettegeneratorwidget.cpp  colorpalettegeneratorwidget.h  colorpalettegeneratorwidget.ui  colorpicker.cpp  colorpicker.h  colorpicker.ui  contrastcheckerwidget.cpp  contrastcheckerwidget.h  contrastcheckerwidget.ui  cppformatterwidget.cpp  cppformatterwidget.h  cppformatterwidget.ui  csharpformatterwidget.cpp  csharpformatterwidget.h  csharpformatterwidget.ui  csvdatatableinfo.cpp  csvdatatableinfo.h  csvdatatableinfo.ui  customwidget.cpp  customwidget.h  desktopcreatorwidget.cpp  desktopcreatorwidget.h  desktopcreatorwidget.ui  domtreewidget.cpp  domtreewidget.h  domtreewidget.ui  gzipwidget.cpp  gzipwidget.h  (+105 more)
